@@ -109,6 +109,11 @@ def test_extract_summary(capsys):
            '=========']
     assert extract_summary(doc, document) == 'blah blah'
 
+    doc = ['=========',
+           'blah blah',
+           '=========']
+    assert extract_summary(doc, document) == 'blah blah'
+
     # hyperlink target
     doc = ['Do `this <https://www.sphinx-doc.org/>`_ and that. '
            'blah blah blah.']
