@@ -30,6 +30,7 @@ Bugs fixed
 * #9522: autodoc: PEP 585 style typehints having arguments (ex. ``list[int]``)
   are not displayed well
 * #9481: autosummary: some warnings contain non-existing filenames
+* #9568: autosummary: summarise overlined sectioned headings correctly
 * #9481: c domain: some warnings contain non-existing filenames
 * #9481: cpp domain: some warnings contain non-existing filenames
 * #9456: html search: abbreation marks are inserted to the search result if
